First working version of the embedded timeline
The TimelineJS plugin still generates some HTTP 404
errors and needs more love but we're happy now!

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 //= require twitter/bootstrap
 //= require twitter/responsive
+//= require timelinejs/css/timeline
 //= require_self
 //= require_tree .
 
