--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,3 +1,7 @@
-<h1><%= @page.title %></h1>
+<article class="page">
+	<h1><%= @page.title %></h1>
 
-<%= markup @page.content %>
+	<div class="content">
+		<%= markup @page.content %>
+	</div>
+</article>
