--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,4 +1,6 @@
 body.pages .page {
+	max-width: 760px;
+	margin: 0 auto;
 	font-family: "lucida grande", tahoma, arial, verdana, sans-serif;
 	font-size: 16px;
 	line-height: 1.5em;
