--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,10 @@
 	padding: 0 10px 0 20px;
 }
 
+body {
+	font-family: "lucida grande", tahoma, arial, verdana, sans-serif;
+}
+
 @media (min-width: 980px) {
 	body {
 		padding-top: 80px;
