--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 body.home.index > .container {
 	max-width: none;
 	width: 100%;
@@ -7,4 +9,12 @@ body.home.index > .container {
 
 #media-timeline {
 	border-style: none;
+}
+
+#media-timeline {
+	.vco-storyjs {
+		p {
+			font-family: $text-font !important;
+		}
+	}
 }
